# bare-sqlite

./: CMakeLists.txt  README.md  binding.c  index.d.ts  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
lib/: database-sync.d.ts  database-sync.js  errors.d.ts  errors.js  sqlite3.def  statement-sync.d.ts  statement-sync.js  tag-store.d.ts  tag-store.js
